working on stuff

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html>
 <body>
 <h1>CORGIS Data Lab</h1>
+<p>This data is from the CORGIS Dataset Project and can be found at</p><a href="https://think.cs.vt.edu/corgis/json/immigration/immigration.html">https://think.cs.vt.edu/corgis/json/immigration/immigration.html</a>
+<p>This data contains statistics about immigration into the United States from countries around the world.</p>
+<p>The source of this data is from the United States Department of Homeland Security and can be found at</p><a href="https://www.dhs.gov/immigration-statistics/yearbook">https://www.dhs.gov/immigration-statistics/yearbook</a>
 </body>
 </html>
