well ain't this pretty

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:300,400" rel="stylesheet">
+<style>
+h1 {
+  font-family: 'Open Sans', sans-serif;
+}
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+a {
+  font-family: 'Montserrat', sans-serif;
+}
+ul {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+}
+</style>
+</head>
 <body>
 <h1>CORGIS Data Lab</h1>
-<p>This data is from the CORGIS Dataset Project and can be found at</p><a href="https://think.cs.vt.edu/corgis/json/immigration/immigration.html">https://think.cs.vt.edu/corgis/json/immigration/immigration.html</a>
-<p>This data contains statistics about immigration into the United States from countries around the world.</p>
-<p>The source of this data is from the United States Department of Homeland Security and can be found at</p><a href="https://www.dhs.gov/immigration-statistics/yearbook">https://www.dhs.gov/immigration-statistics/yearbook</a>
+<p>This data is from the CORGIS Dataset Project and can be found at <a href="https://think.cs.vt.edu/corgis/json/immigration/immigration.html">https://think.cs.vt.edu/corgis/json/immigration/immigration.html</a></p>
+<p>This data contains statistics about immigration into the United States from countries around the world between 2005-2014. Including data such as <ul><li>Enforcement of Immigration Security</li><li>Naturalizations</li><li>Legal Permanent Residences</li><li>Nonimmigrant Admissions</li></ul> </p>
+<p>The source of this data is from the United States Department of Homeland Security and can be found at <a href="https://www.dhs.gov/immigration-statistics/yearbook">https://www.dhs.gov/immigration-statistics/yearbook</a></p>
 </body>
 </html>
