nothing like quoting the department of homeland security

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ ul {
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
 }
+p.dhs {
+  font-weight: bold;
+}
 </style>
 </head>
 <body>
@@ -24,5 +27,7 @@ ul {
 <p>This data is from the CORGIS Dataset Project and can be found at <a href="https://think.cs.vt.edu/corgis/json/immigration/immigration.html">https://think.cs.vt.edu/corgis/json/immigration/immigration.html</a></p>
 <p>This data contains statistics about immigration into the United States from countries around the world between 2005-2014. Including data such as <ul><li>Enforcement of Immigration Security</li><li>Naturalizations</li><li>Legal Permanent Residences</li><li>Nonimmigrant Admissions</li></ul> </p>
 <p>The source of this data is from the United States Department of Homeland Security and can be found at <a href="https://www.dhs.gov/immigration-statistics/yearbook">https://www.dhs.gov/immigration-statistics/yearbook</a></p>
+<p>The data is collected every year by the Department of Homeland Security in "The Yearbook", here is how the DHS explains the data.</p>
+<p class="dhs">The Yearbook of Immigration Statistics is a compendium of tables that provides data on foreign nationals who, during a fiscal year, were granted lawful permanent residence (i.e., admitted as immigrants or became legal permanent residents), were admitted into the United States on a temporary basis (e.g., tourists, students, or workers), applied for asylum or refugee status, or were naturalized. The Yearbook also presents data on immigration enforcement actions, including alien apprehensions, removals, and returns. The Yearbook tables are released as they become available. A final PDF is released in September of the following fiscal year.</p>
 </body>
 </html>
