--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ ul {
 p.dhs {
   font-weight: bold;
 }
+body {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Flag_of_the_United_States_Department_of_Homeland_Security.svg/2000px-Flag_of_the_United_States_Department_of_Homeland_Security.svg.png");
+}
 </style>
 </head>
 <body>
