--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <style>
 h1 {
   font-family: 'Open Sans', sans-serif;
+  position: relative;
+  bottom 30px;
 }
 p {
   font-family: 'Open Sans', sans-serif;
@@ -23,6 +25,7 @@ p.dhs {
 img {
   width: 35%;
   position: relative;
+  top: 28px;
 }
 </style>
 </head>
